@@ -21,6 +21,7 @@ ubiquity (1.8.3) UNRELEASED; urgency=low
   [ Jonathan Riddell ]
   * Fix exception in edit partitions dialogue use in kde_ui
   * Add minimum size to partition_edit_dialog.ui, closes LP: #203626
+  * Fix buttons on question dialogue to use supplied text, closes LP: #203660
 
  -- Evan Dandrea <evand@ubuntu.com>  Tue, 08 Apr 2008 13:05:20 -0400
 
